src/objects/Training_Certification_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created for Report</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training &amp; Certification Plan</relationshipLabel>
        <relationshipName>Training_Certification_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Desired__c</fullName>
        <label>Accreditation Desired</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Authorized - Accreditation In Progress</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base - Certification In Progress</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Co-Branded Service</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>No Accreditation</fullName>
                </value>
                <value>
                    <fullName>Nokia Brand of Service</fullName>
                </value>
                <value>
                    <fullName>Partner Branded Service</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Certifications__c</fullName>
        <inlineHelpText>Please select any additional certifications held by employees at your company, and provide the number of certifications held.</inlineHelpText>
        <label>Additional Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCNP - Service Provider</fullName>
                </value>
                <value>
                    <fullName>CCIP</fullName>
                </value>
                <value>
                    <fullName>CCIE - Routing &amp; Switching</fullName>
                </value>
                <value>
                    <fullName>CCIE - Service Provider</fullName>
                </value>
                <value>
                    <fullName>JNCIS-SP</fullName>
                </value>
                <value>
                    <fullName>JNCIP-SP</fullName>
                </value>
                <value>
                    <fullName>JNCIE-SP</fullName>
                </value>
                <value>
                    <fullName>JNCIP-E</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Plan_Training_Certification__c</fullName>
        <label>Business Plan ID</label>
        <referenceTo>Business_Plan__c</referenceTo>
        <relationshipLabel>Training &amp; Certification Plan</relationshipLabel>
        <relationshipName>Training_Certification_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certification_Required_for_Accreditation__c</fullName>
        <defaultValue>&apos;https://www.partners.nokia.com/s/article/Training&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Certification Required for Accreditation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Field_Technician_of_People__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If None, please enter 0</inlineHelpText>
        <label>Field Technician- # of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Other_provide_Certification_Name_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, provide Certification Name/s</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <defaultValue>&apos;By completing this form, you will be creating a baseline training plan. Nokia EDU Learning leads will use this as a basis of establishing a full training plan.&apos;&amp;
BR()
&amp;&apos;You may use this form to define a full plan your entire team. At a minimum, it should correspond with the certifications that are required to meet the accreditation you would like achieve this plan year.&apos;&amp;
BR() 
&amp;&apos;How to complete:&apos;&amp;
BR() 
&amp;&apos;1) We recommend you start by reviewing the Certifications Required for Accreditation. It can be found under the Support Assets section of the linked page. &apos;&amp;
BR() 
&amp; &apos;2) Select the product line for which you plan to be accredited. Please provide the approximate number of employees who will be trained, by job role and by quarter (Q1, Q2, ...) &apos;&amp;
BR() 
&amp; &apos;3) If you plan to accredit in multiple technologies or product lines (IP Routing, Passive Optical LAN...), please complete this form for each accreditation.&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Introduction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_of_People__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maintenance- # of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Integration_Engineer_of_People__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If None, please enter 0</inlineHelpText>
        <label>Network Integration Engineer # of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Certifications__c</fullName>
        <label>Number of Certifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Indirect Reseller</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Industrial Partner / System Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Field_Technician__c</fullName>
        <label>Quarter (Field Technician)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Maintenance__c</fullName>
        <label>Quarter (Maintenance)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Network_Integration_Engineer__c</fullName>
        <label>Quarter (Network Integration Engineer)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Sales_Engineer__c</fullName>
        <label>Quarter (Sales Engineer)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Sales__c</fullName>
        <label>Quarter (Sales Associate)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Service_Desk_Clerk__c</fullName>
        <label>Quarter (Service Desk Clerk)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Tech_Support__c</fullName>
        <label>Quarter (Tech Support)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Engineer_of_People__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If None, please enter 0</inlineHelpText>
        <label>Sales Engineer- # of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_of_People__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If None, please enter 0</inlineHelpText>
        <label>Sales Associate - # of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Desk_Clerk_of_People__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If None, please enter 0</inlineHelpText>
        <label>Service Desk Clerk- # of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targeted_Date_Field_Technician__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Targeted Date (Field Technician)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_Date_Sales_Engineer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Targeted Date (Sales Engineer)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_Date_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Targeted Date(Sales Associate)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_Date_Service_Desk_Clerk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Targeted Date (Service Desk Clerk)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_Date_Tech_Support__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Targeted Date (Tech Support)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_date_Network_Int_Eng__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Targeted Date (Network Int. Eng.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Support_of_People__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If None, please enter 0</inlineHelpText>
        <label>Tech Support - # of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology_BG_product__c</fullName>
        <label>Technology/ BG product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portfolio</valueSetName>
        </valueSet>
    </fields>
    <label>Training &amp; Certification Plan</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Training &amp; Certification Plan No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training &amp; Certification Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NumberofCertificateRequired</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Additional_Certifications__c)) &amp;&amp;  ISBLANK(  Number_of_Certifications__c )</errorConditionFormula>
        <errorDisplayField>Number_of_Certifications__c</errorDisplayField>
        <errorMessage>Please enter the Number of Certifications.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherCertificateNotRequired</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(INCLUDES( Additional_Certifications__c , &apos;Other&apos;))  &amp;&amp;  NOT(ISBLANK( If_Other_provide_Certification_Name_s__c ))</errorConditionFormula>
        <errorDisplayField>If_Other_provide_Certification_Name_s__c</errorDisplayField>
        <errorMessage>You have already selected Additional Certification.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherCertificateRequired</fullName>
        <active>true</active>
        <errorConditionFormula>INCLUDES( Additional_Certifications__c , &apos;Other&apos;)  &amp;&amp;  ISBLANK( If_Other_provide_Certification_Name_s__c )</errorConditionFormula>
        <errorDisplayField>If_Other_provide_Certification_Name_s__c</errorDisplayField>
        <errorMessage>You have indicated Other. Please enter Certification Name/s.</errorMessage>
    </validationRules>
</CustomObject>